--- a/section/abstract.tex
+++ b/section/abstract.tex
@@ -7,7 +7,7 @@
 适合中文短文本分类的分类网络。本文的主要工作包括了以下几个方面：
 \begin{enumerate}
     \item 通过研究传统词向量模型在中文语料上的不足，本文改进了原有的训练模型，引入
-    了中文汉字信息以及偏旁部首信息，让词向量模型更加适合中文文本，并通过部首转义机制，
+    了中文汉字信息以及偏旁部首信息，让词向量模型更加适合中文文本，并通过部首转换机制，
     将部首替换为与其对应的汉字，使得词向量模型能够更好地识别具有语义联系的词语
     ，让具有相似语义的单词能够在向量空间中彼此靠近，性能更优，解释性更强。并且以此为基础提出了
     另一个字向量模型，弥补了分词错误对词向量的影响，为后续的分类模型提供了更加丰富的语义信息。
@@ -15,8 +15,9 @@
     设计了一个全新的特征提取网络。
     该网络采用了k-max池化与双向循环神经网络技术，具有更好的特征提取能力，能够有效的识别并提取
     文本数据中的语义特征。通过Attention Model技术，
-    网络更加专注分类特征的提取，剔除无效特征，很好的提升了分类模型的分类效果。
-    整体上提升了特征向量质量。
+    网络更加专注分类特征的提取，剔除了无效特征，整体上提升了特征向量质量，
+    从而提升分类模型的分类效果。
+    
     \item 本文采用双通道的短文本分类模型结构，结合了字向量与词向量的文本数据，
     从两个不同的文本表示中对同一段文本提取文本特征，
     极大的丰富了输入短文本的文本信息，有效提升了分类效果，
