--- a/section/chapter4.tex
+++ b/section/chapter4.tex
@@ -3,7 +3,7 @@
 短文本分类在自然语言处理领域中扮演着重要的角色，
 在垃圾信息过滤、语义分析、自动问答等任务中有着广泛的应用。
 本节将通过结合基于局部感知域理论设计的卷积神经网络以及基于时间记忆理论设计的循环神经网络，
-组合两种网络的优点，提出一种新型的中文短文本分类模型。该模型还引入了Attention机制等
+组合两种网络的优点，提出一种新型的中文短文本分类模型。该模型还引入了Attention Model（注意力机制）等
 现在最新的深度神经网络技术，并结合字向量与词向量
 ，优化神经网络提取出的文本特征向量，防止特征向量信息冗余或信息缺失，
 增强模型在中文短文本上的分类效果。
@@ -74,7 +74,7 @@ Bi-LSTM网络的整体流程如图\ref{Bi-LSTM}所示，对于从上层网络传
 
 \section{Attention-Based字词结合卷积循环中文短文本分类网络}
 \subsection{Attention Model}
-Attention Model（注意力机制）是近几年兴起的一个新型模型，在很多场景被证明有效。
+Attention Model是近几年兴起的一个新型模型，在很多场景被证明有效。
 模型以认知心理学中的人脑注意力理论为核心，认为人脑在处理具体任务时，对于相关事物的注意力会集中在
 某一个特定的地方，忽略其他无关的地方，而不是对每个地点分配相同的注意力。
 通过这样的理论，Attention Model
@@ -381,7 +381,8 @@ LSTM层的隐藏节点数目与Attention层的隐藏参数向量长度也都为2
 分类器使用多类分类的逻辑回归分类器。训练循环次数为50，
 批尺寸（batch size）为200。
 \subsection{实验结果和分析}
-本文对上一个小节设计的实验模型在新闻标题语料库上进行实验，每个模型都训练5次并选取平均结果。
+本文对上一个小节设计的实验模型在新闻标题语料库上进行实验，
+每个模型都训练5次并选取平均结果。
 实验对比结果如表\ref{classification_result_table}所示。
 \begin{table}[h]
     \caption{实验对比结果}
