--- a/section/chapter5.tex
+++ b/section/chapter5.tex
@@ -1,11 +1,12 @@
 \chapter{短文本分类系统设计和实现}
 本章主要阐述短文本分类系统的功能设计与代码实现，并详细介绍系统包含的各个功能模块。
 整个系统可以分为离线网络训练与在线短文本分类两大部分，离线网络训练用于语料库更新以及
-分类模型学习与参数调优，在线短文本分类则是系统实际提供的功能，用于给外部系统调用。
-这两部分相互依赖，只有通过离线网络训练不断更新分类模型数据，
-在网络训练时将模型参数调整到最优，才能让在线分类系统获得最好的效果。
+分类模型学习与参数调优，在线短文本分类则用于外部系统调用，给用户提供短文本分类服务。
+这两部分相互依赖，只有通过离线网络训练不断更新分类模型参数，
+才能让在线分类系统获得最好的效果。
 \section{系统总体概述}
-该短文本分类系统设计的主要目的是给其他用户提供一个持续可靠的短文本分类服务，主要思想是依据使用领域不断通过网络爬虫
+短文本分类系统的主要目的是给其他用户提供一个持续可靠的短文本分类服务，
+主要思想是依据使用领域不断通过网络爬虫
 搜集标注好的训练语料，训练出相应的词向量与字向量。然后系统使用这些文本表示信息训练分类
 网络，并根据在验证集上的表现动态调节相关参数让模型效果达到最优。最后使用训练得到的网络参数
 给前台用户提供短文本分类服务。系统的总体架构逻辑上大致可以分为三个子系统：
@@ -315,12 +316,11 @@ for(a = b; a < window * 2 + 1 - b; a++)
 \subsection{模型训练}
 模型训练子系统包含分类网络训练与参数调优两个模块，是整个系统的核心部分，用于训练并获取
 分类性能最优的网络模型参数。详细过程设计如图\ref{train}所示。
-\begin{figure}[!hbp]
+\begin{figure}[h]
     \includegraphics[scale=0.6]{picture/train.png}
     \caption{模型训练子系统过程示意图}
     \label{train}
 \end{figure}
-
 模型训练子系统的详细流程如下：
 \begin{enumerate}
     \item 根据配置文件中的相关配置信息使用Google Tensorflow深度学习框架构建
@@ -329,7 +329,7 @@ for(a = b; a < window * 2 + 1 - b; a++)
     传导，更新网络参数。
     \item 使用验证语料集对训练好的网络进行测试，确定网络的性能以及判断网络是否正确
     收敛。验证语料集不参与网络训练，仅仅在其上进行BP算法的前向过程。
-    \item 根据相关配置文件，在一定范围内微调网络的参数并使用新参数重新训练玩了个，
+    \item 根据相关配置文件，在一定范围内微调网络的参数并使用新参数重新训练，
     尝试优化网络。在调整一定次数之后，取性能最好的网络参数作为最后的有效参数。
     \item 保存完成调优之后的网络参数，以便后续阶段使用。
 \end{enumerate}
@@ -420,7 +420,7 @@ Nginx反向代理服务器提供链接分发服务，保证系统的稳定性以
 确保原始语料数据分类的准确性，爬虫模块丢弃了今日头条网站中分类为“视频”和“广告”的文本，
 因为这两个分类很多时候只代表其内容的性质，并不是从语言上进行分类，加入训练语料会影响模块
 对其他分类的判断。系统5天获取的新闻标题数据如图\ref{spider_data_chart}所示。
-可以看出，同过代理IP池、动态爬取间隔等方式，爬虫模块能够很好的突破一般网站的反爬虫技术，
+可以看出，通过代理IP池、动态爬取间隔等方式，爬虫模块能够很好的突破一般网站的反爬虫技术，
 持续增量的获取所需数据。但也由于爬取间隔的存在，限制了每天能获取新闻的数量，需要通过其他手段改进。
 \subsection{汉字信息库}
 汉字信息库用于给词向量/字向量训练算法提供汉字部首信息，系统共搜集了包括繁简体字在内的
