--- a/section/chapter6.tex
+++ b/section/chapter6.tex
@@ -7,14 +7,14 @@
 学术研究与商业应用领域都有广泛的使用，具备广阔的应用前景。
 
 本文主要研究了深度学习在中文短文本分类方面的应用，通过研究汉字字词和部首语义上的联系，
-以及改进字/词向量模型和特征提取网络，实现了一个新型的文本分类网络模型，
+以及改进字/词向量模型和特征提取网络，实现了一个新型的文本分类网络模型
 ，并结合实际场景，构建了一个短文本分类
 服务系统。本文的主要贡献如下：
 \begin{enumerate}
     \item 对文本分类技术的发展进行了大致介绍，简述了传统文本分类技术的发展现状，
     并对深度学习下的自然语言处理技术进行了简要描述。
     \item 分析了中文词语和词语中包含汉字及相关部首在语义上的内在联系，在CBOW词向量模型的基础
-    上引入了汉字及部首信息，构造了一种新的词向量训练模型，使得训练出的词向量更加切合中文文本，
+    上引入了汉字和偏旁部首的语义信息，结合部首转换技术，构造了一种新的词向量训练模型，使得训练出的词向量更加切合中文文本，
     具有更强的语义相关性。
     \item 在词向量模型的基础上提出了另一个字向量模型，利用汉字部首的语义信息训练中文字向量，
     让语义上有联系的汉字能够在向量空间中更加靠近，补充了词向量模型的不足。
