--- a/reference.bib
+++ b/reference.bib
@@ -305,3 +305,36 @@
   year={2016},
   organization={IEEE}
 }
+@article{harris1954distributional,
+  title={Distributional structure},
+  author={Harris, Zellig S},
+  journal={Word},
+  volume={10},
+  number={2-3},
+  pages={146--162},
+  year={1954},
+  publisher={Taylor \& Francis}
+}
+@inproceedings{pantel2005inducing,
+  title={Inducing ontological co-occurrence vectors},
+  author={Pantel, Patrick},
+  booktitle={Proceedings of the 43rd Annual Meeting on Association for Computational Linguistics},
+  pages={125--132},
+  year={2005},
+  organization={Association for Computational Linguistics}
+}
+@article{levy2015improving,
+  title={Improving distributional similarity with lessons learned from word embeddings},
+  author={Levy, Omer and Goldberg, Yoav and Dagan, Ido},
+  journal={Transactions of the Association for Computational Linguistics},
+  volume={3},
+  pages={211--225},
+  year={2015}
+}
+@inproceedings{pennington2014glove,
+  title={Glove: Global vectors for word representation},
+  author={Pennington, Jeffrey and Socher, Richard and Manning, Christopher},
+  booktitle={Proceedings of the 2014 conference on empirical methods in natural language processing (EMNLP)},
+  pages={1532--1543},
+  year={2014}
+}
