--- a/section/chapter4.tex
+++ b/section/chapter4.tex
@@ -28,9 +28,9 @@ Attention-Based字词结合中文短文本分类分类模型。
 \subsection{卷积循环神经网络整体结构}
 卷积循环神经网络由卷积网络层和循环网络层两个主要模块组成，总体结构如图\ref{CLSTM}所示。
 文本数据编码后，卷积网络层首先会对其进行处理，得到文本的初级特征图，这些特征图之后将输入循环
-网络层，进行更高一级的特征提取。
+网络层，进行更高一级的特征提取，形成最后的文本特征向量。
 \begin{figure}[h]
-    \includegraphics[scale=0.4]{picture/CLSTM.png}
+    \includegraphics[scale=0.35]{picture/CLSTM.png}
     \caption{卷积循环神经网络结构图}
     \label{CLSTM}
 \end{figure}
@@ -43,7 +43,9 @@ Attention-Based字词结合中文短文本分类分类模型。
 
 基于文本数据的信息特征，卷积网络层的卷积模块使用窄卷积（Narrow Convolution）
 作为卷积策略，避免宽卷积（Wide Convolution）的补零操作对提取文本特征造成影响。
-卷积核长度分为3、4、5三种，宽度为词向量的长度，滑动步长为1，保证特征图能够包含尽可能多的文本特征。
+由于短文本语料长度的特征，卷积核长度不宜过长，
+本文中的卷积核设置为三种不同的长度，宽度为词向量的长度，
+这样可以保证特征图能够覆盖尽可能多的文本特征。
 每种卷积核生成128个，保障特征图的多样性。
 
 （2）池化模块
@@ -67,7 +69,7 @@ Attention-Based字词结合中文短文本分类分类模型。
 隐藏层最后一个节点则能够接收到全部的文本特征数据。但是短文本分类任务需要更多的考虑文本上下文信息，单纯使用正向
 循环神经网络，模型只能够依据上文信息进行分类，无法利用下文的信息，从而影响最终的分类效果。因此，本文使用
 双向长短时记忆循环神经网络（Bi-directional Long Short-Term Memory，Bi-LSTM）作为循环网络层的实现，
-将网络分为前向传递层与后向传递层，分别获取输入短文本的上文信息与下文信息。
+将网络分为前向传递层与后向传递层，分别获取输入短文本的上文信息与下文信息，如图\ref{CLSTM}中的循环网络层所示。
 
 Bi-LSTM网络的整体流程如图\ref{Bi-LSTM}所示，对于从上层网络传来的输入向量，网络首先将其转变为
 正序序列及逆序序列两个向量，然后分别输入一个单向LSTM网络进行特征提取，得到正序特征向量与逆序特征向量，
@@ -81,72 +83,6 @@ Bi-LSTM网络的整体流程如图\ref{Bi-LSTM}所示，对于从上层网络传
 \end{figure}
 
 \section{Attention-Based字词结合卷积循环中文短文本分类网络}
-\subsection{Attention Model}
-Attention Model是近几年兴起的一个新型模型，在很多场景被证明有效。
-模型以认知心理学中的人脑注意力理论为核心，认为人脑在处理具体任务时，对于相关事物的注意力会集中在
-某一个特定的地方，忽略其他无关的地方，而不是对每个地点分配相同的注意力。
-通过这样的理论，Attention Model
-能够合理的分配模型的计算资源，并且还可以避免非关键数据对结果的影响。
-Attention Model最先被应用与计算机视觉领域中
-的图片识别等问题，取得了很好的成果，随后在自然语言处理领域也获得了优秀的成绩。
-下面将以编码-解码模型中的Attention机制为例，
-说明Attention Model的基本知识，然后在下一小节把Attention Model应用在卷积循环
-特征提取网络当中。
-
-编码-解码模型是自然语言处理领域中一个非常普遍的模型，它通过编码器将输入向量编码为中间
-变量，再用解码器解码成输出向量，完成输入数据到另一组输出数据的转变，
-从而实现多种内容转换任务，如机器翻译、文本复述等。
-同时编码-解码模型的编码器与解码器没有具体限定，可以使用
-各种各样的深度学习模型，如CNN、RNN等，这让模型具有很强的泛用性，能够适合各种应用场景。
-编码-解码模型的一般架构如图\ref{Encoder}所示。
-\begin{figure}[h]
-    \includegraphics[scale=0.5]{picture/Encoder.png}
-    \caption{编码-解码模型架构图}
-    \label{Encoder}
-\end{figure}
-
-编码-解码模型的输入一般是一个长度为$n$向量序列$X$（$X= \left \{x_1,x_2,x_3,...,x_n \right \}$）,
-输出则是一个长度为$m$的向量序列$Y$（$Y= \left \{y_1,y_2,y_3,...,y_m \right \}$）。
-模型运行时，编码器根据一定的映射规则对输入序列进行编码，得到中间编码$C$，表达公式如\ref{encode_eqn}所示。
-\begin{equation}
-    C=Encode\left ( x_1,x_2,x_3,...x_n \right )
-    \label{encode_eqn}
-\end{equation}
-之后解码器对中间编码$C$进行解码，得到输出序列$Y$，计算公式如\ref{decode_eqn}所示。
-\begin{equation}
-    y_i=Decode\left ( C,y_1,y_2,y_3,...,y_{i-1} \right ),i=1,2,3,...,m
-    \label{decode_eqn}
-\end{equation}
-
-可以看出解码器在计算输出序列$Y$时，对于每一个输出子项$y_i$用到的数据信息是一样的，都是
-输入序列$X$编码后得到的中间编码$C$，
-即输入序列$X$对输出序列$Y$中每一个子项的影响是相同的。这样的方式无疑忽略了
-很多细节，在一些任务中甚至直接影响了输出结果。比如机器翻译任务，
-一个词的翻译虽然与上下文和词本身同时有关，但对于人名机构名等名词，
-翻译时词本身的影响必定较重，而其他的动词形容词等则可能上下文的影响较大，所以简单
-输入序列同比例的作用在输出序列之上并不是一个好的方法。
-
-Attention Model的出现很好的解决了这个问题，在Attention-Based编码-解码模型中，
-编码器的输出不再是一个完整的中间编码$C$，而是输入序列$X$在编码阶段的历史状态$C_i$，
-如公式\ref{attention_encode_eqn}所示。
-\begin{equation}
-    C_i=\sum_{j=1}^{n}\alpha_{ij}Encode\left ( x_j \right )
-    \label{attention_encode_eqn}
-\end{equation}
-其中$\alpha_{ij}$表示当前输入子项$x_j$的注意力权重，这个值越高，表明$x_j$对结果
-越重要。
-
-解码器根据历史状态$C_i$得到优化后的输出序列，如公式\ref{attention_decode_eqn}所示。
-\begin{equation}
-    y_i=Decode\left ( C_i,y_1,y_2,y_3,...y_{i-1} \right ),i=1,2,3,...,m
-    \label{attention_decode_eqn}
-\end{equation}
-
-可以发现，Attention Model本质上既是在模型的输出结果上添加一个注意力权重，
-筛选对结果重要的数据项，同时过滤对结果影响较低的数据项，以此优化模型的输出效果。
-这一思想在短文本分类任务中同样适用，因为对于短文本文本分类任务，确定分类结果的
-往往是文本的几个关键词，如情感分析中的“喜欢”、“讨厌”等词，如果能够判断出这些关键词，
-就可以极大的增强分类模型的结果。
 \subsection{Attention-Based卷积循环特征提取网络}
 \label{ACLSTM_section}
 根据Attention Model的思想，
@@ -396,7 +332,7 @@ LSTM层的隐藏节点数目与Attention层的隐藏参数向量长度也都为2
     \caption{实验对比结果}
     \begin{tabular}{|c|c|c|}
         \hline
-        模型 & 字向量 & 词向量 \\
+        模型 & 词向量 & 字向量 \\
         \hline
         传统CNN & 0.855679 & 0.835943 \\
         \hline
@@ -412,17 +348,23 @@ LSTM层的隐藏节点数目与Attention层的隐藏参数向量长度也都为2
     \label{classification_result_table}
 \end{table}
 
-从实验结果的1到2行中可以看出，和字向量相比，词向量在短文本分类任务中效果更好，这表明
-词向量在文本特征表达上更加有效，同时传统LSTM网络的结果优于传统CNN网络，
-显示出使用LSTM结构的循环神经网络比卷积神经网络更加适合
-提取文本特征。对于表格的第3行与第4行，证明了结合CNN与RNN的卷积循环神经网络能够有效提升模型对文本数据的表达能力，
-而加入Attention Model则能够进一步优化分类效果。
-最后，对比其余模型，本文设计的双通道Attention-Based CLSTM分类模型取得了最好的结果，表明了
-字向量文本特征能够很好的强化原本的词向量文本特征，让模型能够进一步的挖掘短文本的语义，
-有效提高短文本分类的准确率。
+从实验结果中可以看出，虽然传统CNN能够动态获取文本的本地特征，
+但由于忽略了特征的位置信息，因此分类效果不如其他模型。
+传统LSTM模型因为其结构的特点，对文本数据建模更有成效，随意相比传统CNN模型效果
+有所提升。CLSTM模型则将上述两个模型进行了融合，两种结构起到了互补的作用，
+因此分类效果有了较大提升，达到了0.894824与0.872391。
+Attention-Based CLSTM模型同样融合了CNN与LSTM网络，但与CLSTM模型不同的是，
+模型中添加的Attention Model在分类器之前对文本特征向量做了一次筛选，
+所以分类效果有了一定提升。并且，对比表格中的词向量结果与字向量结果，可以发现
+使用词向量的分类模型全部优于使用字向量的分类模型，这说明对于中文文本，词向量
+仍然是文本信息的主要来源，字向量虽然也能达到还算满意的分类效果，但在文本的表现力
+上还是不如词向量优秀。本文设计的双通道Attention-Based CLSTM分类模型
+在Attention-Based CLSTM模型的基础上增加了字向量数据通道，通过
+综合词向量与字向量文本特征的方式，得到了比单独使用语义更加丰富的特征向量，
+在实验中取得了最好的结果。
 \section{本章小结}
 本章主要提出了Attention-Based字词结合卷积循环中文短文本分类模型。
-首先介绍了用于提取文本特征的卷积循环神经网络，然后再分析了Attention Model的相关
-概念并引入卷积循环神经网络。之后加入字向量数据，设计了一个双通道的短文本分类模型，
+首先介绍了用于提取文本特征的卷积循环神经网络，然后再结合Attention Model的相关
+概念提出了Attention-Based卷积循环神经网络。之后加入字向量数据，设计了一个双通道的短文本分类模型，
 弥补了使用单一词向量/字向量的不足。
 最后通过对比实验，验证了模型的可行性及有效性。
