--- a/reference.bib
+++ b/reference.bib
@@ -338,3 +338,18 @@
   pages={1532--1543},
   year={2014}
 }
+@book{firth1961papers,
+  title={Papers in Linguistics 1934-1951: Repr},
+  author={Firth, John Rupert},
+  year={1961},
+  publisher={Oxford University Press}
+}
+@article{bengio2003neural,
+  title={A neural probabilistic language model},
+  author={Bengio, Yoshua and Ducharme, R{\'e}jean and Vincent, Pascal and Jauvin, Christian},
+  journal={Journal of machine learning research},
+  volume={3},
+  number={Feb},
+  pages={1137--1155},
+  year={2003}
+}
