--- a/section/abstract.tex
+++ b/section/abstract.tex
@@ -2,13 +2,14 @@
 随着我国信息化建设的不断推进，以及移动互联网的不断发展，
 互联网中的信息开始爆炸式的增长，进入了以短文本信息为主的碎片化信息时代。
 如何从浩如烟海的信息碎片中准确的获取有用信息，成了学者及商业公司关注的焦点。
-本文主要研究了中文短文本分类的相关技术，通过对经典文本分类模型的有效改进，
-设计并实现了一个新型的短文本分类模型，并改进了传统词向量训练模型，来实现
-适合中文短文本分类的分类网络。本文的主要工作包括了以下几个方面：
+本文主要研究了中文短文本分类的相关技术，改进了传统词向量与字向量的训练模型，
+然后以此对经典文本分类模型进行有效改进，
+设计并实现了一个适合中文短文本的分类模型。本文的主要工作包括了以下几个方面：
 \begin{enumerate}
     \item 通过研究传统词向量模型在中文语料上的不足，本文改进了原有的训练模型，引入
-    了中文汉字信息以及偏旁部首信息，让词向量模型更加适合中文文本，并通过部首转换机制，
-    将部首替换为与其对应的汉字，使得词向量模型能够更好地识别具有语义联系的词语
+    了中文汉字信息以及偏旁部首信息，让词向量模型能够获得额外的共现信息，
+    更加适合中文文本。并通过部首转换机制，
+    将部首替换为与其对应的汉字，使词向量模型能够更好地识别具有语义联系的词语
     ，让具有相似语义的单词能够在向量空间中彼此靠近，性能更优，解释性更强。并且以此为基础提出了
     另一个字向量模型，弥补了分词错误对词向量的影响，为后续的分类模型提供了更加丰富的语义信息。
     \item 本文将卷积神经网络与循环神经网组合使用，引入Attention Model技术，
@@ -17,7 +18,6 @@
     文本数据中的语义特征。通过Attention Model技术，
     网络更加专注分类特征的提取，剔除了无效特征，整体上提升了特征向量质量，
     从而提升分类模型的分类效果。
-    
     \item 本文采用双通道的短文本分类模型结构，结合了字向量与词向量的文本数据，
     从两个不同的文本表示中对同一段文本提取文本特征，
     极大的丰富了输入短文本的文本信息，有效提升了分类效果，
