--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -1,3 +1,6 @@
+\documentclass{standalone}
+    % preamble: usepackage, etc.
+\begin{document}
 \thesischapterexordium
 \section{研究工作的背景与意义}
 
@@ -108,3 +111,4 @@ Google公司开创性的提出注意力（Attention）观点，
 
 第五章，设计并实现了一个短文本分类服务系统。首先简单阐述了系统的总体结构和运行流程，然后
 对各个功能模型进行了详细介绍，接着以具体的新闻网站为语料来源对系统进行测试，并对测试结果进行总结和分析。
+\end{document}
