--- a/section/chapter2.tex
+++ b/section/chapter2.tex
@@ -1,3 +1,6 @@
+\documentclass{standalone}
+% preamble: usepackage, etc.
+\begin{document}
 \chapter{相关技术研究}
 随着互联网技术的发展与国民生活水平的提高，手机持有率直线上升，
 手机网民大规模增长，人们在网上产生的信息、发布的文本日益碎片化。
@@ -721,3 +724,4 @@ Attention Model最先被应用与计算机视觉领域中
 卷积神经网络和循环神经网络在文本分类任务中的应用。
 这些基础内容为本文的后续工作提供了坚实的理论基础，后续章节将根据这些知识
 搭建一个中文短文本分类模型。
+\end{document}
