--- a/section/chapter6.tex
+++ b/section/chapter6.tex
@@ -1,3 +1,6 @@
+\documentclass{standalone}
+% preamble: usepackage, etc.
+\begin{document}
 \chapter{全文总结和展望}
 \section{全文总结}
 随着我国互联网市场的不断扩大，
@@ -11,7 +14,8 @@
 ，并结合实际场景，构建了一个短文本分类
 服务系统。本文的主要贡献如下：
 \begin{enumerate}
-    \item 对文本分类技术的发展进行了大致介绍，简述了传统文本分类技术的发展现状，
+    \item 对文本分类技术的发展进行了大致介绍，简述了文本表示的两种主要方法
+    以及常见的词向量模型，
     并对深度学习下的自然语言处理技术进行了简要描述。
     \item 分析了中文词语和词语中包含汉字及相关部首在语义上的内在联系，在CBOW词向量模型的基础
     上引入了汉字和偏旁部首的语义信息，结合部首转换技术，构造了一种新的词向量训练模型，使得训练出的词向量更加切合中文文本，
@@ -39,3 +43,4 @@
     改进，比如增加更复杂的爬虫管理模块、提升系统计算效率、增加用户管理功能模块等，
     逐步提升系统性能，进一步完善系统功能。
 \end{enumerate}
+\end{document}
