--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,3 @@
-
 % !TEX program = xelatex
 \documentclass[master]{thesis-uestc}
 
@@ -18,5 +17,30 @@
     \include{section/chapter5}
     \include{section/chapter6}
 
+    \thesisacknowledgement
+    白驹过隙，时光流逝，又到了毕业的时候了，短短的生活校园生活即将结束，回顾
+    整个研究生时光取得的成绩和知识，我由衷的感到满足与幸福。这一切离不开自己的努力与
+    坚持，更离不开老师的谆谆教导和同学们的关怀。
+    
+    在攻读硕士学位期间，首先衷心感谢我的导师陈峥，他为人和善，知识深厚，在
+    我学习和生活的方方面面都给与了我指导和帮助，让我获益良多。在项目中给了我们很多的锻炼的机会，
+    培养了我们思考和解决工程实践问题的能力。
+    在生活上，老师和蔼教人，让我感受良多，获益匪浅。
+    每一个细枝末节也在潜移默化中影响和帮助到我面对以后的人生和生活，将使我受益终身。
+
+    我同时也要感谢张婷和刘军在教研室对师弟的指导和关怀，
+    让我能更好的融入这个教研室的大集体生活环境，
+    同时也让我的研究生生活变得更加精彩，
+    指引我在科研的道路上前行，以及在我论文上的指导和建议。
+
+    同时也要感谢三位室友卢震宇，王大帅，徐文龙在研究生学习期间的生活陪伴，因为有了你们，让我的生活变得丰富有趣，
+    感谢我的父母，一直以来对我的支持和鼓励，让我能够勇敢地面对一个又一个困难。
+
+    最后，对参加这次论文评审和检查的老师们表示由衷的感谢。
+
+    
+
     \thesisloadbibliography[nocite]{reference}
+
+    \thesisloadachievement{publications}
 \end{document}
