--- a/section/chapter3.tex
+++ b/section/chapter3.tex
@@ -1,3 +1,6 @@
+\documentclass{standalone}
+% preamble: usepackage, etc.
+\begin{document}
 \chapter{部首信息增强的中文文本表示方法}
 \label{3_section}
 文本的向量化表示是中文短文本分类研究的核心之一。传统的One-hot表示法虽然简单快速，
@@ -601,3 +604,4 @@ RECWE模型能够很好的找到这样的关系。比如单词对“淋浴”与
 文本表示模型——部首信息增强的词向量模型与部首信息增强的字向量模型，最后设计实验
 与其他模型进行对比，实验结果表明模型能够有效提升词向量与字向量的质量，为后续
 分类模型提供充实的基础。
+\end{document}
