--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -98,7 +98,7 @@ Google公司开创性的提出注意力（Attention）观点，
 
 第一章，简要的概述了短文本分类的背景和意义，国内外研究现状以及中文短文本分类所遇到的问题。
 
-第二章，详细地介绍了传统文本分类技术的不足以及深度学习技术在文本分类中的应用。
+第二章，详细地介绍了文本表示的几种常见方法以及常见的词向量训练模型，随后描述了深度学习技术在文本分类中的应用。
 
 第三章，首先介绍了汉字的语义特征以及中文文本表示的一些技术方法，然后结合汉字的偏旁部首信息，
 提出了部首信息增强的中文词向量模型（RECWE）和部首信息增强的中文字向量模型（RECCE），并通过
@@ -111,4 +111,6 @@ Google公司开创性的提出注意力（Attention）观点，
 
 第五章，设计并实现了一个短文本分类服务系统。首先简单阐述了系统的总体结构和运行流程，然后
 对各个功能模型进行了详细介绍，接着以具体的新闻网站为语料来源对系统进行测试，并对测试结果进行总结和分析。
+
+第六章，首先对本文研究内容进行了全面性总结，然后对本文中存在的一些不足做了阐述，最后对本文可能的前进方向做了展望。
 \end{document}
