--- a/section/chapter6.tex
+++ b/section/chapter6.tex
@@ -14,7 +14,7 @@
 ，并结合实际场景，构建了一个短文本分类
 服务系统。本文的主要贡献如下：
 \begin{enumerate}
-    \item 对文本分类技术的发展进行了大致介绍，简述了文本表示的两种主要方法
+    \item 对文本分类技术的发展进行了大致介绍，简述了文本表示的几种主要方法
     以及常见的词向量模型，
     并对深度学习下的自然语言处理技术进行了简要描述。
     \item 分析了中文词语和词语中包含汉字及相关部首在语义上的内在联系，在CBOW词向量模型的基础
